# PsychAI

./: .gitignore  PsychAI.code-workspace  README.md  __init__.py  pyproject.toml
config/: audio.py  settings.py  text.py  vision.py
models/: loader.py  lora.py
psychai/: __init__.py
psychai/artificial_data/: __init__.py  xAyBz.py
psychai/artificial_dataset/: xAyBz.py
psychai/config/: __init__.py  config.py  io.py  llm_eval.py  llm_train.py  llm_training.py  lm_eval.py  lm_train.py  settings.py  text.py  tokenizer.py  training.py
psychai/data/: __init__.py  audio.py  core.py  image.py  llm.py  multimodal.py  read_any.py  text.py  utils.py  vision.py
psychai/dataloader/: llm_dataloader.py  lm_dataloader.py  vision_dataloader.py
psychai/evaluation/: __init__.py  text_evaluator.py
psychai/evaluator/: custom.py  llm.py  llm_evaluator.py
psychai/language/: __init__.py  llm.py  lm.py  load_data.py  prepare_data.py  tokenizer.py  utils.py
psychai/language/llm/: __init__.py  llm_mm.py
psychai/language/llm_old/: llm_evaluator.py  llm_mm.py  llm_trainer.py
psychai/language/lm/: __init__.py  lm_evaluator.py  lm_mm.py  lm_trainer.py
psychai/llm/: __init__.py
psychai/llm/config/: __init__.py  evaluation_config.py  training_config.py
psychai/llm/data/: __init__.py  dataloader.py
psychai/llm/evaluation/: __init__.py  evaluator.py
psychai/llm/models/: __init__.py  llm_loader.py
psychai/llm/training/: __init__.py  trainer.py
psychai/llm/utils/: paths.py
psychai/model_manager/: language.py  llm.py  llm_manager.py  lm_manager.py  vision.py  vision_manager.py
psychai/models/: __init__.py
psychai/nn_builder/: __init__.py  io.py  layer.py  layers.py  load_api.py  model.py  nn_builder.py  save_api.py
psychai/scripts/: __init__.py  evaluate.py  train.py
psychai/simple_nn/: __init__.py
psychai/simple_nn/data/: __init__.py  dataloader.py
psychai/simple_nn/models/: __init__.py  language_loader.py
psychai/simple_nn/training/: __init__.py  trainer.py
psychai/tokenizer/: tokenizer.py
psychai/trainer/: custom.py  llm.py  llm_trainer.py  nn_trainer.py  train_utils.py  utils.py  vision.py
psychai/training/: trainer.py
psychai/utils/: __init__.py  image_utils.py  memory.py  paths.py  utils.py
psychai/vision/: __init__.py  load_data.py  prepare_data.py  utils.py  vision_trainer.py  vm.py
psychai/vision/config/: Training_config
psychai/vision/data/: __init__.py  dataloader.py
psychai/vision/models/: __init__.py  vision_loader.py
psychai/vision/training/: __init__.py  trainer.py
psychai/visualization/: __init__.py  figure_drawing.py  ploting.py
scripts/: train.py
training/: __init__.py  trainer.py
utils/: paths.py
